UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/CaseLineItem__c.object-meta.xml
<CustomObject>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CaseItem-{0000000000}</displayFormat>
        <label>Case Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>