UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>CLI_Account</relationshipName>
    <type>Lookup</type>
</CustomField>