UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Actual_Fraud_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fraud_Amount__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter the Actual Fraud Amount so that every case will contact the Actual Fraud Amount.</description>
    <inlineHelpText>enter the Actual Fraud Amount</inlineHelpText>
    <label>Actual Fraud Amount (A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>