UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Adjustment_carry_through_to_following__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_carry_through_to_following__c</fullName>
    <label>Adjustment - carry through to following</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>