UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Select an Alert Type from a menu so that each case contains an Alert Type. Values to include ATT Referral, Verizon Referral, PBX Hacking On Billed Number, R&amp;C Research, L3 Referral, VOIP/WOSVOIP/IPPBX. Additional Values requested to include Ftr Eng and Lumen.</description>
    <inlineHelpText>Select an Alert Type from a menu so that each case contains an Alert Type.</inlineHelpText>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>ATT Referral</fullName>
            </value>
            <value>
                <fullName>Ftr Eng</fullName>
            </value>
            <value>
                <fullName>L3 Referral</fullName>
            </value>
            <value>
                <fullName>Lumen.</fullName>
            </value>
            <value>
                <fullName>PBX Hacking On Billed Number</fullName>
            </value>
            <value>
                <fullName>R&amp;C Research</fullName>
            </value>
            <value>
                <fullName>Toll-Free</fullName>
            </value>
            <value>
                <fullName>Verizon Referral</fullName>
            </value>
            <value>
                <fullName>VOIP/WOSVOIP/IPPBX</fullName>
            </value>
            <value>
                <fullName>IREF</fullName>
            </value>
            <value>
                <fullName>RFRL</fullName>
            </value>
            <value>
                <fullName>HBTN</fullName>
            </value>
            <value>
                <fullName>FRPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>