UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Authcode__c.field-meta.xml
<CustomField>
    <fullName>Authcode__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter an Authcode so that every case will contain an Authcode should prepopulate with the BTN but should be editable.</description>
    <inlineHelpText>Enter BTN</inlineHelpText>
    <label>Authcode</label>
    <type>Phone</type>
</CustomField>