UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Calculated_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Credit_Amount__c</fullName>
    <formula>Actual_Fraud_Amount__c -  Discount_Calc_B__c +  Tax_Amount_C__c + Late_Payment_Fees_D__c + Late_Payment_Taxes_E__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>