UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Calls__c.field-meta.xml
<CustomField>
    <fullName>Calls__c</fullName>
    <description>enter a numeric quantity in the Calls field so that each case lists the number of calls</description>
    <inlineHelpText>enter a numeric quantity in the Calls field so that each case lists the number of calls</inlineHelpText>
    <label>Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>