UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>CLI_Case</relationshipName>
    <type>Lookup</type>
</CustomField>