UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>No user story on this</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billed Number</fullName>
            </value>
            <value>
                <fullName>Credit Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>