UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/CIC_Code__c.field-meta.xml
<CustomField>
    <fullName>CIC_Code__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter multiple 4 numeric characters in the CIC Code field so that every case includes a CIC Code</description>
    <inlineHelpText>As a current Alert Tracker user, I need to have the ability to enter multiple 4 numeric characters in the CIC Code field so that every case includes a CIC Code</inlineHelpText>
    <label>CIC Code</label>
    <type>TextArea</type>
</CustomField>