UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>67.	As a current Alert Tracker user, I need to have the ability to enter Comments so that every case will contain comments.</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>