UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter a contact Name so that every case will contain a contact Name.</description>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>