UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter Phone/Email information so that every case contains Phone/Email information.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>