UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select from a menu a Source so that every case includes a Source of the Contact information. Values to include BTN, DPI, ESG, INFO TOOL, OTHER, PREV ALERT</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTN</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>INFO TOOL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PREV ALERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>