UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost</description>
    <inlineHelpText>Cost</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>