UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Current_Month_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Adjustment_Amount__c</fullName>
    <label>Current Month Adjustment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>