UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified__c</fullName>
    <description>select a Modify Date from a calendar so that each case contacts which profiles should get visibility</description>
    <inlineHelpText>select a Modify Date from a calendar so that each case contacts which profiles should get visibility</inlineHelpText>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>