UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select from a menu a Description so that every case includes a Description of the Contact information. Values to include Cell, EMAIL, FAX, HOME, OFFICE, OTHER</description>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CELL</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>HOME</fullName>
            </value>
            <value>
                <fullName>OFFICE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>