UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Detect_By__c.field-meta.xml
<CustomField>
    <fullName>Detect_By__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select a Detect By item from a menu so that every case contains Detect By information. Values to include ATT email, Collections, Conversation Center, Customer, DPI, Fraud Credit, Fraud Engineer, L3 email, R&amp;C, VZ email</description>
    <inlineHelpText>select a Detect By item</inlineHelpText>
    <label>Detect By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATT email</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Conversation Center</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>Fraud Credit</fullName>
            </value>
            <value>
                <fullName>Fraud Engineer</fullName>
            </value>
            <value>
                <fullName>L3 email</fullName>
            </value>
            <value>
                <fullName>R&amp;C</fullName>
            </value>
            <value>
                <fullName>VZ email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>