UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>