UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Discount_Calc_B__c.field-meta.xml
<CustomField>
    <fullName>Discount_Calc_B__c</fullName>
    <formula>Actual_Fraud_Amount__c  *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Calc (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>