UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Disputer_Email__c.field-meta.xml
<CustomField>
    <fullName>Disputer_Email__c</fullName>
    <description>Disputer Email</description>
    <inlineHelpText>Disputer Email</inlineHelpText>
    <label>Disputer Email</label>
    <type>Email</type>
</CustomField>