UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Disputer_Name__c.field-meta.xml
<CustomField>
    <fullName>Disputer_Name__c</fullName>
    <description>Disputer Name</description>
    <label>Disputer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>