UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Disputer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Disputer_Phone__c</fullName>
    <description>Disputer Phone</description>
    <inlineHelpText>Disputer Phone</inlineHelpText>
    <label>Disputer Phone</label>
    <type>Phone</type>
</CustomField>