UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Disputer_Title__c.field-meta.xml
<CustomField>
    <fullName>Disputer_Title__c</fullName>
    <description>Disputer Title</description>
    <inlineHelpText>Disputer Title</inlineHelpText>
    <label>Disputer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>