UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>to enter numeric characters in the standard XXXXX:XX format in the Duration field so that each case contains the Duration information.  Use an existing number of digits</description>
    <inlineHelpText>to enter numeric characters in the standard XXXXX:XX format in the Duration field so that each case contains the Duration information.</inlineHelpText>
    <label>Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>