UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>To have the ability to select an End Date from a calendar so that each case contains an End Date.</description>
    <inlineHelpText>To have the ability to select an End Date from a calendar so that each case contains an End Date.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>