UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Estimated_Fraud_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fraud_Amount__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter the Estimated Fraud Amount so that every case will contain an Estimated Fraud Amount.</description>
    <label>Estimated Fraud Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>