UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select a Follow-Up from a menu so that every case will contact a Follow-Up. Values to include 3 DAYS, 10 DAYS, 20 DAYS, 30 DAYS</description>
    <label>Follow-Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 DAYS</fullName>
            </value>
            <value>
                <fullName>10 DAYS</fullName>
            </value>
            <value>
                <fullName>20 DAYS</fullName>
            </value>
            <value>
                <fullName>30 DAYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>