UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Invoice_Dates__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Dates__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select multiple Invoice Dates so that every case will include the Invoice Dates.</description>
    <inlineHelpText>select multiple Invoice Dates</inlineHelpText>
    <label>Invoice Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>