UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Late_Payment_Fees_D__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Fees_D__c</fullName>
    <label>Late Payment Fees (D)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>