UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Modify_Date__c.field-meta.xml
<CustomField>
    <fullName>Modify_Date__c</fullName>
    <description>Modify Date</description>
    <inlineHelpText>Modify Date</inlineHelpText>
    <label>Modify Date</label>
    <type>Date</type>
</CustomField>