UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/MRR_Ethernet_Adj__c.field-meta.xml
<CustomField>
    <fullName>MRR_Ethernet_Adj__c</fullName>
    <label>MRR Ethernet Adj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>