UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>CLI_Order</relationshipName>
    <type>Lookup</type>
</CustomField>