UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Orig_Ani__c.field-meta.xml
<CustomField>
    <fullName>Orig_Ani__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to enter multiple 10-digit number(s) in the Orig ANI field so that every case includes a 10-digit number Standard TN format, XXX XXX-XXXX</description>
    <inlineHelpText>Enter multiple 10-digit number(s) in the Orig ANI field so that every case includes a 10-digit number in Standard TN format, XXX XXX-XXXX</inlineHelpText>
    <label>Orig Ani</label>
    <type>TextArea</type>
</CustomField>