UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Orig_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Orig_Area_Code__c</fullName>
    <description>For Orig area code entry</description>
    <label>Orig Area Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Code_Global</valueSetName>
    </valueSet>
</CustomField>