UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Orig_Country__c.field-meta.xml
<CustomField>
    <fullName>Orig_Country__c</fullName>
    <label>Orig Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Orig_country_global</valueSetName>
    </valueSet>
</CustomField>