UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>CLI_Product</relationshipName>
    <type>Lookup</type>
</CustomField>