UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <description>Select a Product from a menu so that each case contains a Product. Values to include 10xxx, 800#, Collect, D1, D1 Unlimited, Nomadic VOIP, Voip</description>
    <inlineHelpText>Select a Product from a menu so that each case contains a Product.</inlineHelpText>
    <label>Product Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10xxx</fullName>
            </value>
            <value>
                <fullName>800#</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D1 Business (NON PBX)</fullName>
            </value>
            <value>
                <fullName>D1 Residential</fullName>
            </value>
            <value>
                <fullName>D1 Unlimited</fullName>
            </value>
            <value>
                <fullName>Operator Services</fullName>
            </value>
            <value>
                <fullName>PBX CPE</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
            <value>
                <fullName>VOIP Nomadic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>