UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select a Reason from a menu so that every case will contain a Reason</description>
    <inlineHelpText>Select a Reason</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>113 - Frontier VOIP</fullName>
            </value>
            <value>
                <fullName>130 - International Scam Fraud Credit</fullName>
            </value>
            <value>
                <fullName>201 - 800# Fraud</fullName>
            </value>
            <value>
                <fullName>633 - PBX Recourse to Carrier</fullName>
            </value>
            <value>
                <fullName>852 - PBX Hacking Compromise Credit</fullName>
            </value>
            <value>
                <fullName>853 - Frontier Maintained CPE</fullName>
            </value>
            <value>
                <fullName>901 - Jamaica Fraud Credit</fullName>
            </value>
            <value>
                <fullName>993 - 900# Recourse to Carrier</fullName>
            </value>
            <value>
                <fullName>994 - Courtesy Non-Fraud Adjustment</fullName>
            </value>
            <value>
                <fullName>996 - Customer Loyalty 50%</fullName>
            </value>
            <value>
                <fullName>997 - Cut &amp; Clip</fullName>
            </value>
            <value>
                <fullName>998 - Adult Party Line</fullName>
            </value>
            <value>
                <fullName>999 - PBX Fraud Interim Policy</fullName>
            </value>
            <value>
                <fullName>XXX - Credit Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>