UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select a Receipt Date from a calendar so that every case will contain a Receipt Date. Date credit is requested</description>
    <inlineHelpText>select a Receipt Date from a calendar</inlineHelpText>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>