UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Result_Information__c.field-meta.xml
<CustomField>
    <fullName>Result_Information__c</fullName>
    <description>As a current Alert Tracker user, I need to have the ability to select from a menu a Result so that every case contains Result information for every Contact attempt. Values to include Busy Signal, Disconnected, Email Submitted, Fax Sent, Left Message, No Message Left, Other, Ring No Answer, Spoke With, Too Early/Too Late, Wrong Contact</description>
    <label>Result Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy Signal</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Email Submitted</fullName>
            </value>
            <value>
                <fullName>Fax Sent</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No Message Left</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ring No Answer</fullName>
            </value>
            <value>
                <fullName>Spoke With</fullName>
            </value>
            <value>
                <fullName>Too Early/Too Late</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>