UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score</description>
    <inlineHelpText>Score</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>