UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>to have the ability to select a Fraud Status from a menu so that each case contains a Fraud Status. Values to include Not Verified, Undetermined, Verified.</description>
    <inlineHelpText>to have the ability to select a Fraud Status from a menu so that each case contains a Fraud Status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Credit Denied</fullName>
            </value>
            <value>
                <fullName>Credit Issued</fullName>
            </value>
            <value>
                <fullName>Debit Credit</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>