UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>To select the System from a menu so that each case contains the System information. Values to include ATT Referral, DPI, FTR Fraud Engineer, Level 3 Referral, R&amp;C, Referral and add  Verizon</description>
    <inlineHelpText>To select the System from a menu so that each case contains the System information</inlineHelpText>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATT Referral</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>FTR Fraud Engineer</fullName>
            </value>
            <value>
                <fullName>Level 3 Referral</fullName>
            </value>
            <value>
                <fullName>Lumen</fullName>
            </value>
            <value>
                <fullName>R&amp;C</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>