UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Term_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Term_Area_Code__c</fullName>
    <description>For Termination Area Code in Voice traffic</description>
    <label>Term Area Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Code_Global</valueSetName>
    </valueSet>
</CustomField>