UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/fields/Total_Payout_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payout_Adjustment__c</fullName>
    <label>Total Payout Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>