UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/recordTypes/Contact_Information.recordType-meta.xml
<RecordType>
    <fullName>Contact_Information</fullName>
    <active>true</active>
    <description>Contact Information</description>
    <label>Contact Information</label>
</RecordType>