UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/recordTypes/Fraud_Credit.recordType-meta.xml
<RecordType>
    <fullName>Fraud_Credit</fullName>
    <active>true</active>
    <description>Fraud Credit</description>
    <label>Fraud Credit</label>
</RecordType>