UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/recordTypes/Voice_Traffic.recordType-meta.xml
<RecordType>
    <fullName>Voice_Traffic</fullName>
    <active>true</active>
    <description>Voice Traffic</description>
    <label>Voice Traffic</label>
</RecordType>