UCF-APR2.4/ftr main/force-app/main/default/objects/CaseLineItem__c/validationRules/case_line_date_verified_future.validationRule-meta.xml
<ValidationRule>
    <fullName>case_line_date_verified_future</fullName>
    <active>true</active>
    <description>case line item- date verified should not be a future date</description>
    <errorConditionFormula>if ( RecordType.Name = &quot;Voice Traffic&quot; &amp;&amp;  Date_Verified__c &gt; TODAY() ,true , false)</errorConditionFormula>
    <errorDisplayField>Date_Verified__c</errorDisplayField>
    <errorMessage>Date verified should not be a future date</errorMessage>
</ValidationRule>